@@ -42,7 +42,4 @@ function _smarty_regex_replace_check($search)
     }
     return $search;
 }
-
-/* vim: set expandtab: */
-
 ?>
